--- a/apache-php/compose.yaml
+++ b/apache-php/compose.yaml
@@ -4,6 +4,6 @@ services:
       context: app
       target: builder
     ports: 
-      - '80:80'
-    volumes:
-      - ./app:/var/www/html/
+      - '8000:80'
+    #volumes:
+    #  - ./app:/var/www/html/
