--- a/apache-php/compose.yaml
+++ b/apache-php/compose.yaml
@@ -5,5 +5,5 @@ services:
       target: builder
     ports: 
       - '8080:80'
-    #volumes:
-    #  - ./app:/var/www/html/
+    volumes:
+      - ./app:/var/www/html/
